--- a/web/query_folketinget/templates/query_folketinget/index.html
+++ b/web/query_folketinget/templates/query_folketinget/index.html
@@ -11,7 +11,7 @@
 				<div class="col-sm-4">
 					<div class="form-group">
 						<label>Title</label>
-							<input type="text" class="  search-query form-control" id="title" name="title" placeholder="Title" />
+							<input type="text" class="  search-query form-control" id="title" name="title" />
 					</div>
 				</div>
 			</div>
