--- a/web/movie_critics/templates/movie_critics/index.html
+++ b/web/movie_critics/templates/movie_critics/index.html
@@ -44,6 +44,53 @@
 						<img src="{% static "movie_critics/img/most_polarized.png" %}" alt="" class="img-responsive" id="top_image">
 					</div>
 				</div>
+				<div class="row">
+					<h2>Thumbnails</h2>
+				</div>
+				<div class="row">
+				  <div class="col-lg-4">
+				    <div class="thumbnail">
+				      <a href=""><img src="{% static "movie_critics/img/most_polarized.png" %}" alt="" class="img_thumb"></a>
+				      <div class="caption">
+				        <h3>Polarized</h3>
+				        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
+				      </div>
+				    </div>
+				  </div>
+				  <div class="col-lg-4">
+				    <div class="thumbnail">
+				      <a href=""><img src="{% static "movie_critics/img/net_random.png" %}" alt="" class="img_thumb"></a>
+				      <div class="caption">
+				        <h3>Random Net</h3>
+				        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
+				      </div>
+				    </div>
+				  </div>
+				  <div class="col-lg-4">
+				    <div class="thumbnail">
+				      <img src="{% static "movie_critics/img/review_agreement_rate.png" %}" alt="" class="img_thumb">
+				      <div class="caption">
+				        <h3>Review Agreement</h3>
+				        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
+				<!-- MODALS -->
+				<div id="myModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				  <div class="modal-dialog modal-lg">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				        <h4 class="modal-title" id="myModalLabel"></h4>
+				      </div>
+				      <div class="modal-body">
+				 			
+				      </div>
+				    </div>
+				  </div>
+				</div>
 			</div>
 	</body>
 	<script>
@@ -68,6 +115,20 @@
 
 
 		    });
+           $('.img_thumb').on('click',function(){
+           		var text = $(this).closest("div").find("h3").val();
+           		alert(text);
+                var src = $(this).attr('src');
+                var img = '<img src="' + src + '" class="img-responsive"/>';
+                $('#myModal').modal();
+                $('#myModal').on('shown.bs.modal', function(){
+                    $('#myModal .modal-body').html(img);
+                    $('#myModal .modal-header h4').html();
+                });
+                $('#myModal').on('hidden.bs.modal', function(){
+                    $('#myModal .modal-body').html('');
+                });
+           }); 
 		});
 	</script>
 </html>
