--- a/web/movie_critics/templates/movie_critics/index.html
+++ b/web/movie_critics/templates/movie_critics/index.html
@@ -50,7 +50,7 @@
 				<div class="row">
 				  <div class="col-lg-4">
 				    <div class="thumbnail">
-				      <a href=""><img src="{% static "movie_critics/img/most_polarized.png" %}" alt="" class="img_thumb"></a>
+				      <img src="{% static "movie_critics/img/most_polarized.png" %}" alt="" class="img_thumb">
 				      <div class="caption">
 				        <h3>Polarized</h3>
 				        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
@@ -59,7 +59,7 @@
 				  </div>
 				  <div class="col-lg-4">
 				    <div class="thumbnail">
-				      <a href=""><img src="{% static "movie_critics/img/net_random.png" %}" alt="" class="img_thumb"></a>
+				      <img src="{% static "movie_critics/img/net_random.png" %}" alt="" class="img_thumb">
 				      <div class="caption">
 				        <h3>Random Net</h3>
 				        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
